# mcp-universal-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORRECTED_ANALYSIS.md  GITHUB_RELEASE_GUIDE.md  LICENSE  NEXT_STEPS_HANDOFF.md  PACKAGE_READY.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_SETUP_GUIDE.md  PROJECT_SUMMARY.md  PYTHON_PACKAGING_GUIDE.md  README.md  github_setup.sh  package.json  pyproject.toml  requirements.txt  setup.py  test_docker_install.sh  test_framework.py  verify_installation.py
docs/: getting-started.md
examples/: async_task_example.py  corrected_social_example.py  simple_api_example.py
src/mcp_framework/: __init__.py  nlp_utils.py  service_oriented.py
src/mcp_framework/auth/: __init__.py
src/mcp_framework/config/: __init__.py
src/mcp_framework/core/: __init__.py
src/mcp_framework/errors/: __init__.py
src/mcp_framework/templates/: base.py  typescript_service.py
templates/configs/: .env.template  claude_desktop_config.json
templates/python/: fastmcp_api_server.py  sdk_tool_server.py
templates/typescript/: mcp_server_template.ts
tests/: README.md
